--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,4 @@ services:
       - MONGO_URI=${MONGO_URI}
       - JWT_SECRET=${JWT_SECRET}
       - TELEGRAM_BOT_URL=${TELEGRAM_BOT_URL}
+      - AI_URL=${AI_URL}
