--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "socket.io": "^4.7.2",
     "uuid": "^11.1.0"
