--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,5 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3001:3001"
-    environment:
-      - MONGO_URI=${MONGO_URI}
-      - JWT_SECRET=${JWT_SECRET}
-      - TELEGRAM_BOT_URL=${TELEGRAM_BOT_URL}
-      - AI_URL=${AI_URL}
+    env_file:
+      - .env
