--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "coppergroupstudio",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
