--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "fast-back-blaze": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "socket.io": "^4.7.2",
